<resources>
    <string name="app_name">MM_eligibilityMockup</string>
    <string name="eligibility_desc">Study Eligibility Questionnaire </string>
    <string name="join_the_study">Join The Study</string>
    <string name="are_you_18_or_older">Are you 18 or older?</string>
    <string name="eligibility_text">This study is designed for people at least 18 years old who are
        comfortable using a Android phone and the Android Camera.</string>
    <string name="eligibility_yes_title">You are eligible to join the study!</string>
    <string name="eligibility_yes">Touch "NEXT" below the get started with the consent process.</string>
    <string name="ineligibility_text">We\'re sorry that you are ineligible for this research study
    but you may be eligible for other studies. Visit the war on Melanoma website for details. Meanwhile, you can
    still use the app to map and measure your moles without contributing your data. \n\n
    Enjoy and Happy Mapping!</string>
    <string name="war_on_melanoma"><a href="https://www.ohsu.edu/xd/health/services/dermatology/war-on-melanoma/">War on Melanoma</a></string>
    <string name="start_mapping">  Start Mapping  </string>
    <string name="title_activity_intro3_screen"><b><font color="#f5f5f5" size='20'>Mole</font></b><font color="#090a0a" size='20'>Mapper</font></string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome_to_mole_mapper">Welcome to Mole Mapper</string>
    <string name="introScreen1">This app helps you track your moles over time and participate in a research study
    to better understand skin health and melanoma risks.</string>

    <string name="what_is_involved1"> To join this study, we will ask you to do:\n\n
        1. Consent to participate.\n
        2. Register with your email address.\n
        3. Answer questions about yourself.\n
        4. Take pictures and measurements of your moles over time and share your mole data with the study team.\n
         </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_consent">Start Consent</string>

    <!-- Re-consent screen text -->
    <string name="Re_Consent">Re-Consent</string>
    <string name="re_consent_body">Welcome back! Mole Mapper has changed and we need to know if you still
    want to help us with research. Changes are summarized below.\n
    <ul><li>The war on Melanoma is expanding to improve the governance of the data collected by Mole Mapper and shared with
    other collaborating projects. \n</li>
    <li>Mole Mapper has simplified the enrolling process. Part of the simplification process means participants
    opt into sharing both de-indentified data with researchers in general and identifiable data only
    with OHSU researchers and their partners. </li>
    </ul>
    </string>
</resources>

