<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ineligibility_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.mm_eligibilitymockup.ineligibility_screen">

    <TextView
        android:id="@+id/ineligibilityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/ineligibility_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/war_on_melanoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/war_on_melanoma"
        android:textSize="18sp" />

    <Button
        android:id="@+id/join_study"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_border"
        android:onClick="LaunchIntroScreen"
        android:padding="@dimen/button_padding"
        android:text="@string/start_mapping"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
